objects/tffa__FinancialNeed__c.object
<CustomObject>
    <description>Captures the needs of a (potential) customer w.r.t a topic or segment (e.g. Consumer) in the form of question and answers. e.g. preferred average savings balance, interested add-ons to checking, etc. This forms the basis for financial needs analysis (FNA). An FNA is used to analyse a (potential) customer&apos;s current financial situation, future financial needs and goals and what they need to do to reach these goals. The output is usually a list of product recommendations that are relevant to the captured needs.</description>
    <fields>
        <fullName>tffa__AcceptedItemIds__c</fullName>
        <description>List of ids or codes (semicolon separated) of accepted (or selected) items (e.g. products) out of recommended items.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accepted item ids (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related party&apos;s current address. Usually home address.</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Financial Needs</relationshipLabel>
        <relationshipName>FinancialNeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BirthDate__c</fullName>
        <description>Date of birth of the related party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>The channel through which the financial needs were captured.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related Questionnaire Matrix. Can be used for analyzing the efficacy of the strategy during Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Financial Needs</relationshipLabel>
        <relationshipName>FinancialNeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client from which the financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device from which financial need was captured. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client from which the financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which financial need was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FirstName__c</fullName>
        <description>The first name of the related party (individual).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastName__c</fullName>
        <description>The last name of the related party (individual).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NationalIdentifierValue__c</fullName>
        <description>The value of the taxpayer identifier as assigned by the IRS to the related party. e.g. SSN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>National identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Financial Needs</relationshipLabel>
        <relationshipName>FinancialNeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Prequal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether prequalification is required for lending product(s) if selected.</description>
        <label>Prequal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContactEmail__c</fullName>
        <description>The primary email of the primary contact (individual) for the financial needs information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary contact email (DEPRECATED)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the related party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the related party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tffa__ProductSegment__c</fullName>
        <description>The product segment for which the need was captured.</description>
        <label>Product segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__QuestionnaireName__c</fullName>
        <description>Name of the questionnaire</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Questionnaire name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Questionnaire, if questions are derived from a questionnaire.</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Financial Needs</relationshipLabel>
        <relationshipName>FinancialNeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>Tracks the current state/step of the Financial Need (Analysis).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;STARTED&quot;</defaultValue>
        <description>Tracks the current status of the Financial Need (Analysis).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialNeedStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source submission</description>
        <label>Source Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Financial Needs</relationshipLabel>
        <relationshipName>FinancialNeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial need was submitted.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Need</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>